--- a/GrapheneTrace.Client/_Imports.razor
+++ b/GrapheneTrace.Client/_Imports.razor
@@ -10,8 +10,10 @@
 @using GrapheneTrace.Client.Layout
 @using GrapheneTrace.Client.Models
 @using GrapheneTrace.Client.Components.Admin
+@using GrapheneTrace.Client.Services
 @using GrapheneTrace.Core.DTOs.Auth
 @using GrapheneTrace.Core.DTOs.Patient
+@using GrapheneTrace.Core.DTOs.Clinician
 @using MudBlazor
 @using MudBlazor.Charts
 @using System.Linq
